--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^5.1.2",
     "clsx": "^1.0.4",
     "firebase": "^7.4.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
