--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.23",
+    "@types/lodash": "^4.14.149",
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "clsx": "^1.0.4",
     "firebase": "^7.4.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
